[tool.poetry]
name = "backuper"
version = "0.1.0"
description = "SSH backup utility"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
paramiko = "4.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff (>=0.14.1,<0.15.0)"
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D400", "D415",
    "ANN101", "ANN102", "ANN401",
    "COM812", "ISC001",
    "UP031", "RUF003", "D202",
    "G004", "RET501", "TRY400",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
